[gd_scene load_steps=5 format=2]

[ext_resource path="res://level_switcher/level_switcher.gd" type="Script" id=1]
[ext_resource path="res://assets/431118__inspectorj__door-front-closing-a.wav" type="AudioStream" id=2]

[sub_resource type="Animation" id=2]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RedFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.521569, 0.00784314, 0.00784314, 0 ), Color( 0.521569, 0.00784314, 0.00784314, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LevelSwitcher" type="Node"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/fade = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="Fade" type="ColorRect" parent="CanvasLayer"]
margin_right = 1000.0
margin_bottom = 672.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="RedFade" type="ColorRect" parent="CanvasLayer"]
margin_right = 1048.0
margin_bottom = 696.0
mouse_filter = 2
color = Color( 0.521569, 0.00784314, 0.00784314, 0 )

[node name="door_shuts" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
